Final assignment personal website completed

--- a/index.html
+++ b/index.html
@@ -4,11 +4,146 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aryan Sadik | Personal Website</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Checking website 1</h1> 
+<!-- Header top section Start here   -->
+
+<section class="header-top">
+    <div class="wrap">
+        <div class="menu">
+            <ul>
+                <li><a href="#">about</a></li>
+                <li><a href="#">work</a></li>
+                <li><a href="#">portfolio</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </div>
+        <div class="header">
+            <h1>Hi...</h1>
+            <h2>I'm Aryan Sadik</h2>
+            <p>I'm a frontend developer. I have been working for 2 years experience in frontend development.</p>
+            <a class="header-button" href="https://www.linkedin.com/in/aryan-sadik/">hire me</a>
+        </div>
+        <div class="header">
+            <img src="images/profile.png" alt="Aryan Sadik">
+        </div>
+    </div>
+</section>
+
+<!-- Header top section End     -->
+
+
+
+<!-- About section start  -->
+
+<section class="about">
+    <div class="wrap">
+        <div class="about-content">
+            <img src="images/profile.png" alt="Aryan Sadik">
+        </div>
+        <div class="about-content">
+            <h1>About</h1>
+            <p>Hi, I've been working with WordPress for around 4 years. I've got a lot of experience in Front-end and Back-end involving WordPress. I'd be happy to handle your Easy-Hard Project on the Accurate Time.
+            While there are thousands of freelancer web and WordPress developer available in the market, I consider myself as the best as in my professional career I never had one unsatisfied client.
+            </p>
+            <a class="header-button" href="#">Download CV</a>
+        </div>
+    </div>
+</section>
+
+<!-- About section End -->
+
+
+
+
+
+<!-- Latest working project start -->
+
+<section class="latest">
+    <h1><span>latest </span>working project</h1>
+    <div class="working-project">
+        <div id="shadow-effect" class="working-portfolio">
+            <img src="images/latest1.png" alt="portfolio1">
+            <h2>Power-x-gym (gym website)</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        </div>
+
+        <div id="shadow-effect" class="working-portfolio">
+            <img src="images/latest2.png" alt="portfolio2">
+            <h2>Creative Agency</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        </div>
+
+        <div id="shadow-effect" class="working-portfolio">
+            <img src="images/latest3.png" alt="portfolio3">
+            <h2>Hard Rock Music</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        </div>
+    </div>
+</section>
+
+<!--Latest working project End -->
+
+
+
+
+
+<!-- My working process start -->
+
+<section class="work-process">
+    <h1><span>My </span>working process</h1>
+    <hr>
+    <p>What do you want to know about my working style & process then please watch the video?</p>
+    <iframe id="video-content" width="800" height="390" src="https://www.youtube.com/embed/TCReh9n0GQM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+</section>
+
+<!-- My working process End -->
+
+
+
+
+<!-- Work inquiry start  -->
+
+<section class="working-inquiry">
+    <div class="wrap">
+        <div class="inquiry">
+            <h1>work inquiry</h1>
+            <a id="button" href="">let's chat</a>
+        </div>
+    </div>
+</section>
+
+<!-- Work inquiry End  -->
+
+
+
+
+<!-- Footer section start here -->
+
+<section class="footer">
+    <h2>Stay connected</h2>
+    <h3>aryansadik300@gmail.com</h3>
+    <div class="icons">
+        <div class="icons-image">
+            <img src="icons/behance.png" alt="behance">
+        </div>
+        <div class="icons-image">
+            <img src="icons/drible.png" alt="drible">
+        </div>
+        <div class="icons-image">
+            <img src="icons/instragram.png" alt="instragram">
+        </div>               
+    </div>
+</section>
+
+<!-- footer section End here -->
+
 
 
     
